# FrameTrain

./: .gitignore  LICENSE  LICENSE-PROPRIETARY  NEXT_STEPS.txt  PRE_PUSH_CHECK.md  QUICKSTART.txt  README.md  READY_TO_PUSH.md  RELEASE_READY.md  SECRETS_CLEANED.md  SECURITY.md  create-release.sh  final-check.sh  make-executable.sh  package-lock.json  package.json  pre-release-check.sh  push-complete.sh  push-critical-fix.sh  push-signing-fix.sh  push.sh  quick-fix.sh  quick-push.sh  restart.sh  setup.bat  start.sh  stop.sh  test-build.sh
.github/workflows/: build-desktop.yml  ci.yml  release-desktop-app.yml  release.yml
cli/: README.md  pyproject.toml
cli/frametrain/: __init__.py  cli.py  utils.py
cli/frametrain/commands/: __init__.py  config.py  install.py  start.py  update.py  verify_key.py
desktop-app/: .env.example  AUTH_COMPLETE.md  AUTH_UPDATE_README.md  QUICK_REFERENCE.md  UPDATE_SUMMARY.md  create-env.sh  index.html  package-lock.json  package.json  schema.sql  test-connection.sh  test-login.sh  vite.config.ts
desktop-app/ml_backend/: README.md  download_model.py  requirements.txt  train.py
desktop-app/src/: App.tsx  index.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/icons/: README.md  generate-icons.py  generate-placeholder.sh
desktop-app/src-tauri/src/: auth.rs  config_validation.rs  database.rs  dataset_manager.rs  db_commands.rs  main.rs  ml_backend.rs  model_import.rs  training_config.rs.backup  training_manager.rs
desktop-app/src/components/: AnalysisPanel.tsx  Dashboard.tsx  DatasetUpload.tsx  Login.tsx  ModelManager.tsx  Settings.tsx  Sidebar.tsx  TrainingPanel.tsx  VersionManager.tsx
desktop-app2/: .env.example  .gitignore  check_python_env.py  clean-up.sh  cleanup_frametrain.sh  create-release.sh  create_tables.sql  fix-version-selection.sh  fix_existing_version.sql  package-lock.json  package.json  patch_train_engine.py  reset_desktop_app.sh  reset_quick.sh  schema.sql  schema_migration_user_isolation.sql  setup_venv.sh  test.py  test_analysis_data.sql  vite.config.ts
desktop-app2/src/: App.css  App.tsx  index.css
desktop-app2/src-tauri/: Cargo.toml  schema_migration_user_isolation.sql  tauri.conf.json
desktop-app2/src-tauri/capabilities/: default.json
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  DOWNLOAD.md  GITHUB_SETUP.md  RELEASE.md  SCRIPTS.md
md dateien/: DESIGN_SYSTEM.md  FIXES.md  PAYMENTS_QUICK.md  PAYMENT_SETUP.md  PROJECT_STATUS.md  QUICKSTART_GUIDE.md
sh/: check-ports.sh  diagnose.sh  force-kill.sh  install-deps.sh  install-rust.sh  make-executable.sh  quick-fix.sh  quickstart.sh  setup-env.sh  setup.sh  status.sh  test-auth-flow.sh  test-auth.sh  test.sh
shared/: package.json
shared/src/: constants.ts  types.ts  utils.ts
website/: .env.example  .env.local.example  PAYMENT_SETUP.md  SETUP.md  init-db.sh  next.config.js  package-lock.json  package.json  tailwind.config.js
website/prisma/: init.sql  schema.prisma
website/src/: middleware.ts
(+103 files in other folders)
