[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frametrain-cli"
version = "1.0.0"
description = "Command-line interface for FrameTrain - Local ML Training Platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [
    {name = "FrameTrain Team"}
]
keywords = ["ml", "training", "cli", "frametrain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.scripts]
frametrain = "frametrain.cli:main"

[project.urls]
Homepage = "https://frametrain.ai"
Documentation = "https://docs.frametrain.ai"
Repository = "https://github.com/frametrain/cli"
