[package]
name = "frametrain"
version = "1.0.0"
description = "FrameTrain Desktop App"
authors = ["FrameTrain Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.9", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
