[package]
name = "frametrain"
version = "1.0.0"
description = "FrameTrain Desktop App"
authors = ["FrameTrain Team"]
edition = "2021"

# Tauri 2 build script
[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2.9.3", features = [] }
dotenvy = "0.15"

# Plugins (werden in main.rs benutzt)
tauri-plugin-os = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Datenbank + Tools
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"

# HTTP Client für Supabase
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.12"

# Password Hashing
bcrypt = "0.15"

[features]
default = []
